policies/poststart-tcpsocket-host-containers.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-poststart-tcpsocket-host-containers
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        object.spec.containers.all(c,
          !has(c.lifecycle) ||
          !has(c.lifecycle.postStart) ||
          !has(c.lifecycle.postStart.tcpSocket) ||
          !has(c.lifecycle.postStart.tcpSocket.host) ||
          c.lifecycle.postStart.tcpSocket.host == ""
        )
      message: >
        spec.containers[*].lifecycle.postStart.tcpSocket.host must be undefined or empty ("").
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-tcpsocket-host-containers-namespace-optout-warn
spec:
  policyName: check-poststart-tcpsocket-host-containers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/poststart-tcpsocket-host-containers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-tcpsocket-host-containers-namespace-optin-warn
spec:
  policyName: check-poststart-tcpsocket-host-containers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: poststart-tcpsocket-host-containers.validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-tcpsocket-host-containers-namespace-optout-audit
spec:
  policyName: check-poststart-tcpsocket-host-containers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/poststart-tcpsocket-host-containers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-tcpsocket-host-containers-namespace-optin-audit
spec:
  policyName: check-poststart-tcpsocket-host-containers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: poststart-tcpsocket-host-containers.validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-tcpsocket-host-containers-namespace-optout-deny
spec:
  policyName: check-poststart-tcpsocket-host-containers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/poststart-tcpsocket-host-containers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-tcpsocket-host-containers-namespace-optin-deny
spec:
  policyName: check-poststart-tcpsocket-host-containers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: poststart-tcpsocket-host-containers.validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["true"]
